Using .env for url